addressinput, searchinput and states.json

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,28 @@
     "label.staffID": "Staff ID",
     "label.password": "Password",
     "label.confirmPassword": "Confirm Password",
-
+    "label.fullName": "Fullname",
+    "label.race": "Race",
+    "label.gender": "Gender",
+    "label.male": "Male",
+    "label.female":"Female",
+    "label.heartDisease": "Heart Disease",
+    "label.heartAttack": "Heart Attack",
+    "label.stroke": "Stroke",
+    "label.elevatedCholesterol": "Elevated Cholesterol",
+    "label.elevatedTriglycerides": "Elevated Triglycerides",
+    "label.diabetes": "Diabetes",
+    "label.hypertension": "Hypertension",
+    "label.sleepingDisorder": "Sleeping Disorder",
+    "label.otherVascularCondition": "Other Vascular Condition",
+    "label.indian": "Indian",
+    "label.malay": "Malay",
+    "label.chinese": "Chinese",
+    "label.educationLevel": "Education Level",
+    "label.bachelors": "Bachelors",
+    "label.masters": "Masters",
+    "label.phd": "PhD",
+    "label.secondarySchool": "Secondary School",
 
     "error.pattern": "{{field}} should match the required pattern.",
     "error.required": "{{field}} is required."
