smoking and e-smoking status, select and search values

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,8 @@
     "label.staffID": "Staff ID",
     "label.password": "Password",
     "label.confirmPassword": "Confirm Password",
-    "label.fullName": "Fullname",
+    "label.fullName": "Full Name",
+    "label.ic": "IC No.",
     "label.race": "Race",
     "label.gender": "Gender",
     "label.male": "Male",
@@ -30,7 +31,46 @@
     "label.state": "State",
     "label.city": "City",
     "label.reasonForConsultation": "Reason For Consultation",
+    "label.otherVascularConditionName": "Name of Other Vascular Condition",
+    "label.otherVascularConditionYears": "Years of Living with Other Vascular Condition",
+    "label.cigarettesPerDay": "Number of Cigarettes Per Day",
+    "label.numberOfCigarettesPerDay": "{{min}}-{{max}} cigarettes per day",
+    "label.moreThanNumberOfCigarettes": "More than {{max}} cigarettes per day",
+    "label.smokingStatus": "Smoking Status",
+    "label.dateOfBirth": "Date of Birth",
+    "label.eSmokingStatus": "E-cigarette Smoker",
+    "label.nicotineAmt": "{{percentage}}% ({{amt}} mg/ml)",
+    "label.stress": "Stress",
+    "label.friendsFamily": "Friends/Family",
+    "label.social": "Social",
+    "label.lastSmoked": "Last Smoked",
+    "label.YearsSmoked": "Years Smoked",
+    
+
+    "option.chinese": "Chinese",
+    "option.malay": "Malay",
+    "option.indian": "Indian",
+    "option.male": "Male",
+    "option.female": "Female",
+    "option.yes": "Yes",
+    "option.no": "No",
+    "option.exSmoker": "Ex-Smoker",
+    "option.cigarettes": "Cigarettes",
+    "option.eCigarettes": "E-Cigarettes",
+    "option.reformedAlcoholic": "Reformed Alcoholic",
 
     "error.pattern": "{{field}} should match the required pattern.",
-    "error.required": "{{field}} is required."
+    "error.required": "{{field}} is required.",
+
+    "question.familyHistory": "Does a family member have one or more of the following conditions?",
+    "question.healthHistory": "Do you have  one or more of the following conditions?",
+    "question.smokingStatus": "Do you smoke {{smoking}}?",
+    "question.familyHasSmoker": "Do any of your family members smoke?",
+    "question.causeOfSmoking": "What made you start to smoke?",
+    "question.lastSmoked": "When was the last time you smoked?",
+    "question.yearsSmoked": "How many years did you smoke for?",
+    "question.startedSmokingAge": "At what age did you start to smoke?",
+    "question.nicotineAmt": "What is the percentage or milligrams of nicotine content in your E-liquid?",
+    "question.numberOfCigarettesPerDay": "How many sticks of cigarettes smoked per day?",
+    "question.alcoholStatus": "Do you consume alcohol?"
 }
