patient information & questionnaire  done

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -11,7 +11,7 @@
     "label.heartDisease": "Heart Disease",
     "label.heartAttack": "Heart Attack",
     "label.stroke": "Stroke",
-    "label.elevatedCholesterol": "Elevated Cholesterol",
+    "label.highCholesterol": "High Cholesterol",
     "label.elevatedTriglycerides": "Elevated Triglycerides",
     "label.diabetes": "Diabetes",
     "label.hypertension": "Hypertension",
@@ -45,7 +45,37 @@
     "label.social": "Social",
     "label.lastSmoked": "Last Smoked",
     "label.YearsSmoked": "Years Smoked",
-    
+    "label.noAlcoholConsumption": "None",
+    "label.avgAlcoholConsumption": "How often do you consume alcohol?",
+    "label.avgAlcoholConsumptionEx": "How often did you consume alcohol?",
+    "label.avgAlcoholConsumptionRange": "{{min}} - {{max}} drinks per {{period}}",
+    "label.moreThanAvgAlcoholConsumption": "{{min}} or more drinks per {{period}}",
+    "label.alcoholType": "Alcohol Type",
+    "label.diet": "Diet",
+    "label.height": "Height",
+    "label.weight": "Weight",
+    "label.fruits": "Fruits",
+    "label.vegetables": "Vegetables",
+    "label.processedFood": "Processed Food",
+    "label.meat": "Meat",
+    "label.friedFood": "Fried Food",
+    "label.smoking":"Smoking",
+    "label.exercise":"Exercise",
+    "label.eightHoursOfSleep": "Eight Hours of Sleep",
+    "label.familyHistory": "Family History",
+    "label.healthHistory": "Health History",
+    "label.comments": "Comments",
+    "label.firstName":"First Name",
+    "label.lastName": "Last Name",
+    "label.phoneNumber": "Phone Number",
+    "label.country": "Country",
+    "label.diagnosis": "Diagnosis",
+    "label.severely-underweight": "Severely Underweight",
+    "label.underweight": "Underweight",
+    "label.normal": "Normal Weight",
+    "label.overweight":"Overweight",
+    "label.moderate-obese":"Moderately Obese",
+    "label.severely-obese": "Severely Obese",
 
     "option.chinese": "Chinese",
     "option.malay": "Malay",
@@ -58,6 +88,18 @@
     "option.cigarettes": "Cigarettes",
     "option.eCigarettes": "E-Cigarettes",
     "option.reformedAlcoholic": "Reformed Alcoholic",
+    "option.vegetarian": "Vegetarian",
+    "option.nonVegetarian": "Non-Vegetarian",
+    "option.other": "Other",
+    "option.one": "1",
+    "option.two": "2",
+    "option.three": "3",
+    "option.four": "4",
+    "option.five": "5",
+    "option.six": "6",
+    "option.seven": "7",
+    "option.eight": "8",
+    "option.eightOrMore": "8+",
 
     "error.pattern": "{{field}} should match the required pattern.",
     "error.required": "{{field}} is required.",
@@ -72,5 +114,23 @@
     "question.startedSmokingAge": "At what age did you start to smoke?",
     "question.nicotineAmt": "What is the percentage or milligrams of nicotine content in your E-liquid?",
     "question.numberOfCigarettesPerDay": "How many sticks of cigarettes smoked per day?",
-    "question.alcoholStatus": "Do you consume alcohol?"
+    "question.alcoholStatus": "Do you consume alcohol?",
+    "question.startedDrinkingAge": "At what age did you start to drink?",
+    "question.yearsConsumed": "How many years have you been drinking?",
+    "question.dietaryInformation": "What sort of diet are you on?",
+    "question.height": "What is your height (m)?",
+    "question.weight": "What is your weight (kg)?",
+    "question.eightHoursOfSleep": "Do you have at least eight (8) hours of sleep each night?",
+    "question.stress": "Are you under a lot of stress?",
+    "question.exercise": "Do you exercise regularly?",
+    "question.smoking": "Do you smoke? (If smoked in the past, select 'No')",
+    "question.friedFood": "Do you eat fried food more than once per week?",
+    "question.meat": "Do you eat smoked meats or fish more than once per week on average?",
+    "question.vegetables": "Do you consume vegetables (cabbage, cauliflower, broccoli, Brussel sprouts) fewer than 5 times per week on average?",
+    "question.processedFood": "Do you eat luncheon meats, processed meats, sausages, bacon, bologna or any other nitrate salt containing meat once per week or more on average?",
+    "question.fruits": "Do you consume fruits fewer than 4 times per week on average?",
+
+    "path.new-patient": "New Patient",
+    "path.dashboard": "",
+    "path.patients": "Patient Database"
 }
