pagination in patient database

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -2,7 +2,7 @@
     "label.staffID": "Staff ID",
     "label.password": "Password",
     "label.confirmPassword": "Confirm Password",
-    "label.fullName": "Full Name",
+    "label.fullName": "First Name",
     "label.ic": "IC No.",
     "label.race": "Race",
     "label.gender": "Gender",
