--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -100,6 +100,7 @@
     "option.seven": "7",
     "option.eight": "8",
     "option.eightOrMore": "8+",
+    "option.other": "Other",
 
     "error.pattern": "{{field}} should match the required pattern.",
     "error.required": "{{field}} is required.",
