tested ml algorithm, report page, terms and conditions

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -86,7 +86,6 @@
     "label.reportID": "Report",
     "label.username": "Username",
     "label.comment": "Comment",
-    "label.vegetarian": "Are you a vegetarian?",
     "label.login": "login",
     "label.new-patient": "New Patient",
     "label.health-history": "Health History",
@@ -98,6 +97,34 @@
     "label.ma": "Malay",
     "label.f": "Female",
     "label.m": "Male",
+    "label.patient": "Patient",
+    "label.feedback": "Feedback",
+    "label.high-cholesterol": "High Cholesterol",
+    "label.heart-disease": "Heart Disease",
+    "label.occupation": "Occupation",
+    "label.smokingFrequency": "Smoking Frequency",
+    "label.durationOfSleep": "Duration of Sleep",
+    "label.ergonomicWorkspace": "Ergonomic Workspace",
+    "label.computerHours": "Computer Hours",
+    "label.seatedHours": "Seated Hours",
+    "label.activeScale": "Active Scale",
+    "label.exerciseProgramme": "Exercise Programme",
+    "label.personalTrainer": "Personal Trainer",
+    "label.dietaryPlan": "Dietary Plan",
+    "label.alcoholFrequency": "Alcohol Consumption",
+    "label.meatFrequency": "Average Meat Consumption",
+    "label.dairyFrequency": "Average Dairy Consumption",
+    "label.friedFoodFrequency":"Average Fried Food Consumption",
+    "label.eggFrequency": "Average Weekly Whole Egg Consumption Frequency",
+    "label.meatOverFriedFood": "Meat over Fried Food Preference",
+    "label.vegetarian": "Vegetarian Diet",
+    "label.milkTeaCoffeeLowfat": "Average Milk, Tea, Coffee, etc. Consumption",
+    "label.dessertFrequency": "Average Dessert Consumption",
+    "label.snacksFrequency": "Average Snacks Consumption",
+    "label.vegetableIntake": "Average Daily Vegetable Intake Consumption",
+    "label.fruitsIntake": "Average Daily Fruits Intake Consumption",
+    "label.fiveFruitFrequencyIntake": "Average Daily 5 Servings of Fruit and Vegetables Consumption",
+    "label.fourCitrusFrequencyIntake": "Average Weekly Fewer than 4 Citrus Fruits Consumption",
 
     "option.chinese": "Chinese",
     "option.malay": "Malay",
@@ -186,6 +213,7 @@
     "question.vegetarian": "Are you a vegetarian or near vegetarian?",
     "question.computerHours": "How many hours do you spend in front of the computer?",
     "question.seatedHours": "How much time do you spend in a seated position?",
+    "question.durationOfSleep": "How many hours do you sleep everyday?",
 
     "path.new-patient": "New Patient",
     "path.home": "",
