removed console.log and fixed toaster error, added new error message for empty report number

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -125,6 +125,7 @@
     "label.fruitsIntake": "Average Daily Fruits Intake Consumption",
     "label.fiveFruitFrequencyIntake": "Average Daily 5 Servings of Fruit and Vegetables Consumption",
     "label.fourCitrusFrequencyIntake": "Average Weekly Fewer than 4 Citrus Fruits Consumption",
+    "label.ot": "Others",
 
     "option.chinese": "Chinese",
     "option.malay": "Malay",
