translation, other errors

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -180,7 +180,7 @@
     "question.friedFood": "Do you eat fried food more than once per week?",
     "question.meat": "Do you eat smoked meats or fish more than once per week on average?",
     "question.vegetables": "Do you consume vegetables (cabbage, cauliflower, broccoli, Brussel sprouts) fewer than 5 times per week on average?",
-    "question.processedFood": "Do you eat luncheon meats, processed meats (Example: ayamas), sausages, bacon, bologna or any other nitrate salt containing meat once per week or more on average?",
+    "question.processedFood": "How often , on average, do you consume any foods or drinks that are highly processed and contain preservative, artificial flavours, colours and related chemicals?",
     "question.fruits": "Do you consume fruits fewer than 4 times per week on average?",
     "question.exerciseProgramme": "Are you in any exercise programme?",
     "question.personalTrainer": "Do you have a personal trainer?",
