translation.json, minor typos

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -179,7 +179,7 @@
     "question.smoking": "Do you smoke? (If smoked in the past, select 'No')",
     "question.friedFood": "Do you eat fried food more than once per week?",
     "question.meat": "Do you eat smoked meats or fish more than once per week on average?",
-    "question.vegetables": "Do you consume vegetables (cabbage, cauliflower, broccoli, Brussel sprouts) fewer than 5 times per week on average?",
+    "question.vegetables": "Do you consume vegetables (cabbage, cauliflower, broccoli, brussel sprouts) fewer than 5 times per week on average?",
     "question.processedFood": "How often , on average, do you consume any foods or drinks that are highly processed and contain preservative, artificial flavours, colours and related chemicals?",
     "question.fruits": "Do you consume fruits fewer than 4 times per week on average?",
     "question.exerciseProgramme": "Are you in any exercise programme?",
@@ -195,9 +195,9 @@
     "question.meatFrequency": "How often, on average, do you eat any of the following foods?",
     "question.snacksFoodFrequency": "How often on average do you consume any of the following snack foods?",
     "question.sodaCandyFrequency": "How often on average do you consume any of the following snack or drinks?",
-    "question.vegetableIntake": "On an average, how many servings per day do you consume of garden type vegetables?",
-    "question.grainBeansIntake": "On an average, how many servings per day do you consume of any of the following?",
-    "question.fruitsIntake": "On an average, how many servings per day do you consume of fruits?",
+    "question.vegetableIntake": "On average, how many servings of garden type vegetables do you consume per day?",
+    "question.grainBeansIntake": "On average, how many servings of the following do you consume per day?",
+    "question.fruitsIntake": "On average, how many servings of fruit do you consume per day?",
     "question.processedFoodIntake": "How often, on an average, do you consume any foods or drinks that are highly processed and contain preservative, artificial flavors, colors and related chemicals?",
     "question.fiveFruitFrequencyIntake": "Do you have fewer than 5 servings of fruits and vegetables per day on average?",
     "question.fourCitrusFrequencyIntake": "Do you consume citrus fruits fewer than 4 times per week on average?",
