manifest.json, input labels, removed temppatientdata from patientdatabase, changes to robots.txt

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -126,6 +126,8 @@
     "label.fiveFruitFrequencyIntake": "Average Daily 5 Servings of Fruit and Vegetables Consumption",
     "label.fourCitrusFrequencyIntake": "Average Weekly Fewer than 4 Citrus Fruits Consumption",
     "label.ot": "Others",
+    "label.profilePicBlob": "Profile Pic",
+    "label.image": "Image",
 
     "option.chinese": "Chinese",
     "option.malay": "Malay",
